--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,9 @@ h6,
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
-
+.text-black {
+    color: black;
+}
 .bg-primary-gradient {
     background: linear-gradient(to bottom right, var(--primary), var(--secondary));
 }
