--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /********** Template CSS **********/
 :root {
-    --primary: #369bcd;
+    --primary: #99e53e;
     --secondary: #798b95;
     --light: #ffffff;
     --dark: #262B47;
